src/test/c/accept/16-useDeclaredTab.msh
Tab myTab = Tab(C7(5, q)arp G(5, q) c5(q) a5(q));

score myScore { 
    {
        tempo 200;
        signature 4 / 4;
        piano {
            clef clefG;
            tabs {
                Cm(q) E(q) Gsus4(q) R(q) | E(q) G(q) Dmaj7(q) F(q) | c7(q) d7(q) e#7(q) f7(q) | myTab | myTab
            }
        }
    }
}    